# llm

./: .env  .gitignore  README.md  get_result.py  main.py  pyproject.toml  run.sh  run.yaml  upload.py
MinerU_docker/: run.sh
document/: a.md
pdf2md/: .gitignore  README.md  __init__.py  __main__.py  cmd_convert.py  cmd_download.py  cmd_result.py  cmd_serve.py  cmd_task.py  cmd_upload.py  config.py  download.py  miner.py  mineru.json  mineru.py  mineru_parallel.py  run.sh  utils.py
pdf2md/static/: script.js
pdf2md/templates/: tasks.html  upload.html
pdf2mdv2/: README.md  __init__.py  __main__.py  cmd_serve.py  mineru.py  pyproject.toml  rag.py  routes.py  tasks.py  utils.py  worker.py
pdf2mdv2/static/: style.css
pdf2mdv2/templates/: tasks.html  upload.html
scripts/: proxy.sh  start-mineru.sh  start-openwebui.sh
