[project]
name = "llm2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bibtexparser>=1.4.4",
    "flask>=3.1.3",
    "openapi-python-client>=0.28.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
